PLATFORM/backend/api/query_parser/sortParser.py
# Generated from org/antlrQueryParser/sort.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class sortParser ( Parser ):

    grammarFileName = "sort.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'asc'", "'ASC'", "'desc'", "'DESC'", 
                     "<INVALID>", "'('", "')'", "'!'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "':'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DASH_LETTER_DIGIT", "LPAREN", "RPAREN", 
                      "NEGATION", "DASH", "LETTER", "DIGIT", "DOT", "DOUBLE_DOT", 
                      "SEP", "SPACE", "WS" ]

    RULE_sort = 0
    RULE_sort_expression = 1
    RULE_sort_set = 2
    RULE_qualified_sort = 3
    RULE_order = 4
    RULE_field = 5
    RULE_sep = 6
    RULE_lparen = 7
    RULE_rparen = 8
    RULE_double_dot = 9

    ruleNames =  [ "sort", "sort_expression", "sort_set", "qualified_sort", 
                   "order", "field", "sep", "lparen", "rparen", "double_dot" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    DASH_LETTER_DIGIT=5
    LPAREN=6
    RPAREN=7
    NEGATION=8
    DASH=9
    LETTER=10
    DIGIT=11
    DOT=12
    DOUBLE_DOT=13
    SEP=14
    SPACE=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sort_expression(self):
            return self.getTypedRuleContext(sortParser.Sort_expressionContext,0)


        def getRuleIndex(self):
            return sortParser.RULE_sort

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSort" ):
                listener.enterSort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSort" ):
                listener.exitSort(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSort" ):
                return visitor.visitSort(self)
            else:
                return visitor.visitChildren(self)




    def sort(self):

        localctx = sortParser.SortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sort)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.sort_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sort_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sort_set(self):
            return self.getTypedRuleContext(sortParser.Sort_setContext,0)


        def lparen(self):
            return self.getTypedRuleContext(sortParser.LparenContext,0)


        def rparen(self):
            return self.getTypedRuleContext(sortParser.RparenContext,0)


        def getRuleIndex(self):
            return sortParser.RULE_sort_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSort_expression" ):
                listener.enterSort_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSort_expression" ):
                listener.exitSort_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSort_expression" ):
                return visitor.visitSort_expression(self)
            else:
                return visitor.visitChildren(self)




    def sort_expression(self):

        localctx = sortParser.Sort_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sort_expression)
        try:
            self.state = 27
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [sortParser.DASH_LETTER_DIGIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.sort_set()
                pass
            elif token in [sortParser.LPAREN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 23
                self.lparen()
                self.state = 24
                self.sort_set()
                self.state = 25
                self.rparen()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sort_setContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualified_sort(self):
            return self.getTypedRuleContext(sortParser.Qualified_sortContext,0)


        def sep(self):
            return self.getTypedRuleContext(sortParser.SepContext,0)


        def sort_set(self):
            return self.getTypedRuleContext(sortParser.Sort_setContext,0)


        def getRuleIndex(self):
            return sortParser.RULE_sort_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSort_set" ):
                listener.enterSort_set(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSort_set" ):
                listener.exitSort_set(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSort_set" ):
                return visitor.visitSort_set(self)
            else:
                return visitor.visitChildren(self)




    def sort_set(self):

        localctx = sortParser.Sort_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sort_set)
        try:
            self.state = 34
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.qualified_sort()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.qualified_sort()
                self.state = 31
                self.sep()
                self.state = 32
                self.sort_set()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Qualified_sortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field(self):
            return self.getTypedRuleContext(sortParser.FieldContext,0)


        def double_dot(self):
            return self.getTypedRuleContext(sortParser.Double_dotContext,0)


        def order(self):
            return self.getTypedRuleContext(sortParser.OrderContext,0)


        def sort_expression(self):
            return self.getTypedRuleContext(sortParser.Sort_expressionContext,0)


        def getRuleIndex(self):
            return sortParser.RULE_qualified_sort

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualified_sort" ):
                listener.enterQualified_sort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualified_sort" ):
                listener.exitQualified_sort(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualified_sort" ):
                return visitor.visitQualified_sort(self)
            else:
                return visitor.visitChildren(self)




    def qualified_sort(self):

        localctx = sortParser.Qualified_sortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_qualified_sort)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.field()
                self.state = 37
                self.double_dot()
                self.state = 38
                self.order()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.field()
                self.state = 41
                self.sort_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return sortParser.RULE_order

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrder" ):
                listener.enterOrder(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrder" ):
                listener.exitOrder(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrder" ):
                return visitor.visitOrder(self)
            else:
                return visitor.visitChildren(self)




    def order(self):

        localctx = sortParser.OrderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_order)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sortParser.T__0) | (1 << sortParser.T__1) | (1 << sortParser.T__2) | (1 << sortParser.T__3))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASH_LETTER_DIGIT(self):
            return self.getToken(sortParser.DASH_LETTER_DIGIT, 0)

        def field(self):
            return self.getTypedRuleContext(sortParser.FieldContext,0)


        def getRuleIndex(self):
            return sortParser.RULE_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField" ):
                listener.enterField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField" ):
                listener.exitField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = sortParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_field)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(sortParser.DASH_LETTER_DIGIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(sortParser.DASH_LETTER_DIGIT)
                self.state = 49
                self.field()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(sortParser.SEP, 0)

        def getRuleIndex(self):
            return sortParser.RULE_sep

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSep" ):
                listener.enterSep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSep" ):
                listener.exitSep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSep" ):
                return visitor.visitSep(self)
            else:
                return visitor.visitChildren(self)




    def sep(self):

        localctx = sortParser.SepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sep)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(sortParser.SEP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LparenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(sortParser.LPAREN, 0)

        def getRuleIndex(self):
            return sortParser.RULE_lparen

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLparen" ):
                listener.enterLparen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLparen" ):
                listener.exitLparen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLparen" ):
                return visitor.visitLparen(self)
            else:
                return visitor.visitChildren(self)




    def lparen(self):

        localctx = sortParser.LparenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lparen)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(sortParser.LPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RparenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RPAREN(self):
            return self.getToken(sortParser.RPAREN, 0)

        def getRuleIndex(self):
            return sortParser.RULE_rparen

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRparen" ):
                listener.enterRparen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRparen" ):
                listener.exitRparen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRparen" ):
                return visitor.visitRparen(self)
            else:
                return visitor.visitChildren(self)




    def rparen(self):

        localctx = sortParser.RparenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rparen)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(sortParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Double_dotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_DOT(self):
            return self.getToken(sortParser.DOUBLE_DOT, 0)

        def getRuleIndex(self):
            return sortParser.RULE_double_dot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDouble_dot" ):
                listener.enterDouble_dot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDouble_dot" ):
                listener.exitDouble_dot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDouble_dot" ):
                return visitor.visitDouble_dot(self)
            else:
                return visitor.visitChildren(self)




    def double_dot(self):

        localctx = sortParser.Double_dotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_double_dot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(sortParser.DOUBLE_DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





